# NovusCore-AuthMaster

./: .gitmodules  CMakeLists.txt
server/: CMakeLists.txt  EngineLoop.cpp  EngineLoop.h  defines.h  main.cpp
server/ECS/Components/: ConnectionComponent.h  InternalConnectionComponent.h
server/ECS/Systems/: InternalPacketHandlerSystem.cpp  InternalPacketHandlerSystem.h  PacketHandlerSystem.cpp  PacketHandlerSystem.h
server/Networking/: MessageHandler.cpp  MessageHandler.h  Opcodes.h
server/Networking/Handlers/Client/Auth/: AuthHandlers.cpp  AuthHandlers.h
server/Networking/Handlers/Server/Auth/: AuthHandlers.cpp  AuthHandlers.h
server/Utils/: ServiceLocator.cpp  ServiceLocator.h
